--- a/doodooDis140/manifest.plist
+++ b/doodooDis140/manifest.plist
@@ -35,7 +35,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>apartment</string>
+				<string>寓多多</string>
 			</dict>
 		</dict>
 	</array>
